# ecom-bot

./: .env.example  README.md  app.py  app_lc.py  pyproject.toml  schemas.py
data/: eval_prompts.txt  faq.json  few_shots.jsonl  orders.json  style_guide.yaml
reports/: style_eval.json
src/: brand_chain.py  style_eval.py
